# RAG

./: .env  README.md  main.py  output.md  pyproject.toml  rag_evaluation.ipynb  rag_idea.ipynb  response.json
data_source/: sample_predictions.json  truth_dataset.json
evaluation_results/: evaluation_report.md  evaluation_results.json  latest_evaluation.json
parsed_documents/: hipaa-simplification-201303_parsed.md
src/rag/: __init__.py  evaluator.py  io.py
tests/: test_evaluator.py
